--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script>
+<script type="text/babel">
   const root = document.getElementById("root");
   function App() {
-    const data = React.useState();
+    const [counter, modifier] = React.useState(0);
     return (
       <div>
-        <h3>Total Click : 0</h3>
+        <h3>Total Click : {}</h3>
         <button>Click Me !!</button>
       </div>
     );
