React useState in Function

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <script type="text/babel">
   const root = document.getElementById("root");
   function App() {
-    const [counter, modifier] = React.useState(0);
+    const [counter, setCounter] = React.useState(0);
+    const onClick = () => {
+      setCounter(counter + 1);
+    }
     return (
       <div>
-        <h3>Total Click : {}</h3>
-        <button>Click Me !!</button>
+        <h3>Total Click : {counter}</h3>
+        <button onClick={onClick}>Click Me !!</button>
       </div>
     );
   }
