--- a/index2.html
+++ b/index2.html
@@ -9,18 +9,36 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
   function App() {
-    const [minutes, setMinutes] = React.useState();
+    const [minutes, setMinutes] = React.useState(0);
     const onChange = (event) => {
       setMinutes(event.target.value);
     }
+    const reset = () => { setMinutes(0); };
     return (
       <div>
         <h1 className="hi">Super Converter</h1>
-        <label htmlFor="minutes">Minutes</label>
-        <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChange} ></input>
-        <h2>this is your number? : {minutes}</h2>
-        <label htmlFor="minutes" >Hour</label>
-        <input id="minutes" placeholder="Hour" type="number"></input>
+        <div>
+          <label htmlFor="minutes">Minutes</label>
+          <input
+            value={minutes}
+            id="minutes"
+            placeholder="Minutes"
+            type="number"
+            onChange={onChange}
+          ></input>
+          <h2>this is your number? : {minutes}</h2>
+        </div>
+        <div>
+          <label htmlFor="minutes" >Hour</label>
+          <input
+            value={Math.round(minutes / 60)}
+            id="hours"
+            placeholder="Hours"
+            type="number"
+            disabled
+          ></input>
+        </div>
+        <button onClick={reset}>Reset</button>
       </div>
     );
   }
