State Practice part Two

--- a/index2.html
+++ b/index2.html
@@ -9,36 +9,44 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
   function App() {
-    const [minutes, setMinutes] = React.useState(0);
+    const [amount, setAmount] = React.useState(0);
+    const [flipped, setFlipped] = React.useState(false);
     const onChange = (event) => {
-      setMinutes(event.target.value);
+      setAmount(event.target.value);
     }
-    const reset = () => { setMinutes(0); };
+    const reset = () => { setAmount(0); };
+    const onFlip = () => {
+      setFlipped((cuurent) => !cuurent);
+      reset();
+    };
     return (
       <div>
         <h1 className="hi">Super Converter</h1>
         <div>
           <label htmlFor="minutes">Minutes</label>
           <input
-            value={minutes}
+            value={flipped ? amount * 60 : amount}
             id="minutes"
             placeholder="Minutes"
             type="number"
             onChange={onChange}
+            disabled={flipped}
           ></input>
-          <h2>this is your number? : {minutes}</h2>
+          <h2>this is your number? : {amount}</h2>
         </div>
         <div>
           <label htmlFor="minutes" >Hour</label>
           <input
-            value={Math.round(minutes / 60)}
+            value={flipped ? amount : Math.round(amount / 60)}
             id="hours"
             placeholder="Hours"
             type="number"
-            disabled
+            onChange={onChange}
+            disabled={!flipped}
           ></input>
         </div>
         <button onClick={reset}>Reset</button>
+        <button onClick={onFlip}>Flip</button>
       </div>
     );
   }
