--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-  function App() {
+  function MinutesToHours() {
     const [amount, setAmount] = React.useState(0);
     const [inverted, setInverted] = React.useState(false);
     const onChange = (event) => {
@@ -21,7 +21,6 @@
     };
     return (
       <div>
-        <h1 className="hi">Super Converter</h1>
         <div>
           <label htmlFor="minutes">Minutes</label>
           <input
@@ -50,6 +49,16 @@
       </div>
     );
   }
+
+  function App() {
+    return (
+      <div>
+        <h1 className="hi">Super Converter</h1>
+        <MinutesToHours />
+      </div>
+    );
+  }
+
   const root = document.getElementById("root")
   ReactDOM.render(<App />, root);
 </script>
