--- a/index_useProps.html
+++ b/index_useProps.html
@@ -8,19 +8,25 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-  const root = document.getElementById("root");
+  function Btn(props) {
+    return <button style={{
+      backgroundColor: "tomato",
+      color: "white",
+      padding: "10px 20px",
+      border: 0,
+      borderRadius: 10,
+    }}>{props.text}</button>
+  }
+
   function App() {
-    const [counter, setCounter] = React.useState(0);
-    const onClick = () => {
-      setCounter((current) => current + 1);
-    }
     return (
       <div>
-        <h3>Total Click : {counter}</h3>
-        <button onClick={onClick}>Click Me !!</button>
+        <Btn text="Save Change" />
+        <Btn text="Continue" />
       </div>
     );
   }
+  const root = document.getElementById("root");
   ReactDOM.render(<App />, root);
 </script>
 
