--- a/index_useProps.html
+++ b/index_useProps.html
@@ -7,22 +7,29 @@
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script type="text/babel">
   function Btn(props) {
-    return <button style={{
-      backgroundColor: "tomato",
-      color: "white",
-      padding: "10px 20px",
-      border: 0,
-      borderRadius: 10,
-    }}>{props.text}</button>
+    console.log();
+    return <button
+      onClick={props.changeValue}
+      style={{
+        backgroundColor: "tomato",
+        color: "white",
+        padding: "10px 20px",
+        border: 0,
+        borderRadius: 10,
+        fontSize: props.fontSize
+      }}>{props.text}</button>
   }
-
+  const MemorizedBtn = React.memo(Btn);
   function App() {
+    const [value, setValue] = React.useState("Save Changes");
+    const changeValue = () => (setValue("Revert Changes"));
     return (
       <div>
-        <Btn text="Save Change" />
-        <Btn text="Continue" />
+        <MemorizedBtn text={value} changeValue={changeValue} fontSize={20} />
+        <MemorizedBtn text="Continue" />
       </div>
     );
   }
